tests/pass/StaticAndMemberInitialization.java
package pass;

public class StaticAndMemberInitialization {

    static 
    {
        int a = 1;
        int b = 2;
        int c = a + b;
    }
 
    {
        int a = 1;
        int b = 2;
        int c = a + b;
    }

    
}
