tests/fail/StaticBlocks.java
public class StaticBlocks {
    int {

    }

    static public {

    }

    {
        
    }
    
}
